[gd_scene load_steps=6 format=3 uid="uid://dvuijgst0i82m"]

[ext_resource type="Script" path="res://src/components/level_elements/object/_map_object_interactable.gd" id="1_uvhrf"]
[ext_resource type="Material" uid="uid://ddkmrxbhp6alq" path="res://src/shared/material_outline.tres" id="2_hrgsc"]
[ext_resource type="Texture2D" uid="uid://b5plkbb45x5j3" path="res://src/components/level_elements/object/png/cat_alt_crop.png" id="3_4vvnc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dgiar"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hq71m"]
radius = 50.0

[node name="Object" type="Node2D"]
script = ExtResource("1_uvhrf")
hide_after_interaction = null
key = "CAT"

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = ExtResource("2_hrgsc")
position = Vector2(0, -7)
scale = Vector2(0.05, 0.05)
texture = ExtResource("3_4vvnc")

[node name="Area2D2" type="Area2D" parent="Sprite"]
scale = Vector2(20, 20)
collision_mask = 255

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D2"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_dgiar")

[node name="InteractionShape2D" type="Area2D" parent="Sprite"]
unique_name_in_owner = true
position = Vector2(0, 200)
scale = Vector2(20, 20)

[node name="InteractionCollisionShape2D" type="CollisionShape2D" parent="Sprite/InteractionShape2D"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_hq71m")
debug_color = Color(0.662852, 0.510289, 0.148882, 0.42)

[connection signal="body_entered" from="Sprite/Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="input_event" from="Sprite/Area2D2" to="." method="_on_area_2d_2_input_event"]
[connection signal="body_entered" from="Sprite/InteractionShape2D" to="." method="_on_interaction_shape_2d_body_entered"]
[connection signal="body_exited" from="Sprite/InteractionShape2D" to="." method="_on_interaction_shape_2d_body_exited"]
